# SMAUG-T

SMAUG-T-1.2.0/: .gitignore  LICENSE  README.md
SMAUG-T-1.2.0/.github/workflows/: clang-format.yml
SMAUG-T-1.2.0/reference_implementation/: CMakeLists.txt  README.md  parse_speed.sh  run_all.sh  test_kat.sh
SMAUG-T-1.2.0/reference_implementation/benchmark/: CMakeLists.txt  PQC_bench.c  cpucycles.c  cpucycles.h  speed.c  speed_print.c  speed_print.h
SMAUG-T-1.2.0/reference_implementation/include/: fips202.h  hash.h  randombytes.h
SMAUG-T-1.2.0/reference_implementation/kat/: CMakeLists.txt  PQCgenKAT_kem.c  kat_api.h  kat_kem.c  rng.c  rng.h
SMAUG-T-1.2.0/reference_implementation/src/: fips202.c  hash.c  hwt.c  randombytes.c
SMAUG-T-1.2.0/reference_implementation/test/: CMakeLists.txt  UnitTest.cpp  main.c
__MACOSX/SMAUG-T-1.2.0/reference_implementation/include/: ._dg.h
bench_smaugt_baseline/: .gitignore  bench_smaugt_kem.c
bench_smaugt_baseline/results/: smaugt_all.csv  smaugt_all_summary.md
bench_smaugt_baseline/results/logs/: avx2_evidence.txt  smaugt_128_reference_bench.out  smaugt_192_reference_bench.out  smaugt_256_reference_bench.out
scripts/: bench_smaugt_all.sh
